[gd_scene load_steps=3 format=3 uid="uid://dd0vxwt8r48u6"]

[ext_resource type="Script" path="res://roca.gd" id="1_7soag"]
[ext_resource type="Texture2D" uid="uid://dcvy5x3bprmu5" path="res://sprites/Roca.png" id="2_arcpk"]

[node name="roca" type="RigidBody2D" groups=["roca"]]
position = Vector2(-200, -332)
script = ExtResource("1_7soag")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.29, 0.346)
texture = ExtResource("2_arcpk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.12499, -0.874992)
scale = Vector2(3.2125, 3.6125)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
scale = Vector2(0.322489, 0.324782)
polygon = PackedVector2Array(-99, -27, -115, 26, -116, 35, -61, 107, -27, 115, 66, 95, 94, 54, 103, 6, 87, -53, 33, -99, -32, -114, -93, -75)

[node name="Area2D2" type="Area2D" parent="." groups=["roca"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D2"]
scale = Vector2(0.322489, 0.324782)
polygon = PackedVector2Array(-99, -27, -115, 26, -116, 35, -61, 107, -27, 115, 66, 95, 94, 54, 103, 6, 87, -53, 33, -99, -32, -114, -93, -75)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
